added stories section

--- a/about.html
+++ b/about.html
@@ -9,42 +9,7 @@
 
     <title>Sachcha Prayas</title>
     <link rel="icon" type="image/x-icon" href="public/image/logo.png" />
-    <!-- <style>
-    .goog-te-banner-frame{
-        display:none !important;
-    }
-    
-    #google_translate_element select{
-        background-color:#ffffff;
-        color:  rgb(220 38 38);
-        border: none;
-        width: 115px;
-        overflow: hidden;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-        padding:6px 8px
-    }
-    .goog-logo-link{
-        display:none !important;
-    }
-    .goog-te-gadget{
-        color:transparent!important;
-    }
-    .VIpgJd-ZVi9od-l4eHX-hSRGPd{
-        display:none !important;
-    }
-    .goog-te-combo{
-        width: 202px;
-        overflow: hidden;
-        border: 1px solid #009e4d;
-        border-radius: 5px;
-        padding: 10px;
-        background-color: #f7f7f7;
-        color: #13b95a;
-        cursor: pointer;
-        appearance: none;
-    }
-    </style> -->
+   
 </head>
 
 <body class="bg-gray-5100 font-sans leading-normal tracking-normal">
@@ -172,6 +137,63 @@
         <!-- <div class="flex justify-center"> -->
 </section>
 
+<!-- strory section -->
+<div class="back-color py-24 sm:py-16 bg-green-100 mb-24">
+    <div class="mx-auto max-w-7xl px-6 lg:px-16">
+        <div class="mx-auto max-w-6xl lg:mx-0 p-1">
+            <h2 class="text-3xl font-bold tracking-tight text-green-600 sm:text-4xl heading-font-family text-color">
+                Stories of change</h2>
+            <h2 class="mt-6 text-base font-bold tracking-tight text-gray-900 sm:text-lg heading-font-family ">
+                We bring to you stories from the ground which connect, inform and inspire. </h2>
+        </div>
+        <ul role="list"
+            class="mx-auto mt-16 grid  grid-cols-1 gap-x-8 gap-y-12 md:grid-cols-3 lg:mx-0 lg:max-w-none lg:grid-cols-3">
+            <li class="bg-white p-2 rounded-lg cursor-pointer">
+                <a href="stories.html" class="bg-white p-2 rounded-lg">
+                    <!-- <img class="aspect-[3/2] w-full object-cover" src="./public/img/Blogs/Blog 1 picture.png" alt=""> -->
+                    <h3 class="heading-font-family text-color  text-2xl font-semibold leading-8 tracking-tight p-2 text-green-600">
+                        Amrita Soni
+
+                    </h3>
+                    <p class="text-base leading-7 text-gray-700 p-2">
+                        Amrita Soni’s father passed away when she was just 16 years old, just as she was preparing for the 11th grade. Being the eldest child, she had to quit her studies to take responsibility for her mother and siblings. Her mother, Urmila Soni, decided to teach her daughter...                    </p>
+                </a>
+
+            </li>
+
+            <!-- More people... -->
+
+            <li class="bg-white p-2 rounded-lg cursor-pointer">
+                <a href="stories.html" class="bg-white p-2 rounded-lg">
+                    <!-- <img class="aspect-[3/2] w-full object-cover" src="./public/img/Blogs/Blog 1 picture.png" alt=""> -->
+                    <h3 class="heading-font-family text-color  text-2xl font-semibold leading-8 tracking-tight p-2 text-green-600">
+                        Durgabai Sahu
+                    </h3>
+                    <p class="text-base leading-7 text-gray-700 p-2">
+                        Durgabai Sahu, 40, who lives in Hardauli Bargi Nagar gram panchayat, first faced severe financial difficulties 11 years ago when her husband, Ram Sahu suffered losses in his contracting business. He fell ill soon after and Durgabai recalls that they exhausted all their savings on his medical...                    </p>
+                </a>
+
+            </li>
+
+            <!-- More people... -->
+            <li class="bg-white p-2 rounded-lg cursor-pointer">
+                <a href="stories.html" class="bg-white p-2 rounded-lg">
+                    <!-- <img class="aspect-[3/2] w-full object-cover" src="./public/img/Blogs/Blog 1 picture.png" alt=""> -->
+                    <h3 class="heading-font-family text-color text-2xl font-semibold leading-8 tracking-tight p-2 text-green-600">
+                        Nuri Begum
+                    </h3>
+                    <p class="text-base leading-7 text-gray-700 p-2">
+                        Nuri Begum, who has never been to school, lives in the small village of Hardauli in Bargi Nagar, with her husband Sheikh Mahboob and four children. She always harboured a strong desire to do something meaningful. The first few years of marriage was one of extreme poverty. Nuri wanted to support...                    </p>
+                </a>
+
+            </li>
+        </ul>
+    </div>
+</div>
+
+
+<!-- strory section end-->
+
 
 
 
@@ -260,8 +282,8 @@
 
 
 
+<!-- How You Can Help -->
   <section>
-    <!-- How You Can Help -->
     <div class="px-6 py-12 back-color text-gray-800 lg:text-left -700 bg-emerald-400">
         <!-- need to add margin below -->
         <div class="container mx-auto xl:px-20 ">
