--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
 	<title>Sachcha Prayas</title>
 	<link rel="icon" type="image/x-icon" href="public/image/logo.png" />
+	<script defer data-domain="sachchaprayas.in" src="https://analytics.aikyamhq.com/js/script.file-downloads.hash.outbound-links.pageview-props.tagged-events.js"></script>
+<script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
+
 
 
 </head>
